@@ -1,0 +1,60 @@
+#!/usr/bin/python
+# -*- encoding: utf-8; py-indent-offset: 4 -*-
+# +------------------------------------------------------------------+
+# |             ____ _               _        __  __ _  __           |
+# |            / ___| |__   ___  ___| | __   |  \/  | |/ /           |
+# |           | |   | '_ \ / _ \/ __| |/ /   | |\/| | ' /            |
+# |           | |___| | | |  __/ (__|   <    | |  | | . \            |
+# |            \____|_| |_|\___|\___|_|\_\___|_|  |_|_|\_\           |
+# |                                                                  |
+# | Copyright Mathias Kettner 2016             mk@mathias-kettner.de |
+# +------------------------------------------------------------------+
+#
+# This file is part of Check_MK.
+# The official homepage is at http://mathias-kettner.de/check_mk.
+#
+# check_mk is free software;  you can redistribute it and/or modify it
+# under the  terms of the  GNU General Public License  as published by
+# the Free Software Foundation in version 2.  check_mk is  distributed
+# in the hope that it will be useful, but WITHOUT ANY WARRANTY;  with-
+# out even the implied warranty of  MERCHANTABILITY  or  FITNESS FOR A
+# PARTICULAR PURPOSE. See the  GNU General Public License for more de-
+# tails. You should have  received  a copy of the  GNU  General Public
+# License along with GNU Make; see the file  COPYING.  If  not,  write
+# to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
+# Boston, MA 02110-1301 USA.
+
+# example output
+# OTHER Database (SID)                *
+# OTHER Oracle Version                *
+# OTHER Database Creation Time        'SELECT CREATED' or 'SELECT MIN(created) FROM dba_objects'
+#       DB Startup Time               'SELECT to_char(startup_time,'DD-MON-YYYY HH24:MI:SS') "DB Startup Time" FROM sys.v_$instance;'
+# OTHER DB Log Mode                   *
+# OTHER DB Open Mode                  *
+# OTHER DB Logins                     *
+# DONE  Dataguard State               -
+# OTHER Flashback                     'SELECT flashback_on FROM v$database;'
+#       SGA (System Global Area)      'SELECT * FROM V$SGA;' or 'select * from V$SGAINFO;'
+#       Temp File Size                'SELECT * FROM V$TEMPFILE'
+
+
+def inv_oracle_dataguard_stats(info):
+    node = inv_tree_list("software.applications.oracle.dataguard_stats:")
+    for line in info:
+        if len(line) >= 5:
+            db_name, db_unique_name, database_role, parameter, value = line[:5]
+            switchover = None
+            if len(line) > 5:
+                switchover = line[-1]
+
+            node.append({
+                "id"         : db_name,
+                "db_unique"  : "%s.%s" % (db_name, db_unique_name),
+                "role"       : database_role,
+                "switchover" : switchover,
+            })
+
+
+inv_info['oracle_dataguard_stats'] = {
+    'inv_function' : inv_oracle_dataguard_stats,
+}
