@@ -1,0 +1,58 @@
+#!/usr/bin/python
+# -*- encoding: utf-8; py-indent-offset: 4 -*-
+# +------------------------------------------------------------------+
+# |             ____ _               _        __  __ _  __           |
+# |            / ___| |__   ___  ___| | __   |  \/  | |/ /           |
+# |           | |   | '_ \ / _ \/ __| |/ /   | |\/| | ' /            |
+# |           | |___| | | |  __/ (__|   <    | |  | | . \            |
+# |            \____|_| |_|\___|\___|_|\_\___|_|  |_|_|\_\           |
+# |                                                                  |
+# | Copyright Mathias Kettner 2016             mk@mathias-kettner.de |
+# +------------------------------------------------------------------+
+#
+# This file is part of Check_MK.
+# The official homepage is at http://mathias-kettner.de/check_mk.
+#
+# check_mk is free software;  you can redistribute it and/or modify it
+# under the  terms of the  GNU General Public License  as published by
+# the Free Software Foundation in version 2.  check_mk is  distributed
+# in the hope that it will be useful, but WITHOUT ANY WARRANTY;  with-
+# out even the implied warranty of  MERCHANTABILITY  or  FITNESS FOR A
+# PARTICULAR PURPOSE. See the  GNU General Public License for more de-
+# tails. You should have  received  a copy of the  GNU  General Public
+# License along with GNU Make; see the file  COPYING.  If  not,  write
+# to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
+# Boston, MA 02110-1301 USA.
+
+# example output
+# OTHER Database (SID)                *
+# OTHER Oracle Version                *
+# OTHER Database Creation Time        -
+# OTHER DB Startup Time               -
+# OTHER DB Log Mode                   *
+# OTHER DB Open Mode                  *
+# OTHER DB Logins                     *
+# OTHER Dataguard State               -
+# OTHER Flashback                     -
+# DONE  SGA (System Global Area)      -
+#       Temp File Size                -
+
+# <<<oracle_performance:sep(124)>>>
+# XE|SGA_info|Maximum SGA Size|367439872
+
+
+def inv_oracle_performance(parsed):
+    node = inv_tree_list("software.applications.oracle.performance:")
+    for entry, entryinfo in parsed.items():
+        if "SGA_info" in entryinfo:
+            sga_info, sga_size = entryinfo["SGA_info"].items()[0]
+            node.append({
+                "id"       : entry,
+                "sga_info" : sga_info,
+                "sga_size" : sga_size,
+            })
+
+
+inv_info['oracle_performance'] = {
+    'inv_function' : inv_oracle_performance,
+}
