@@ -1,0 +1,53 @@
+#!/usr/bin/python
+# -*- encoding: utf-8; py-indent-offset: 4 -*-
+# +------------------------------------------------------------------+
+# |             ____ _               _        __  __ _  __           |
+# |            / ___| |__   ___  ___| | __   |  \/  | |/ /           |
+# |           | |   | '_ \ / _ \/ __| |/ /   | |\/| | ' /            |
+# |           | |___| | | |  __/ (__|   <    | |  | | . \            |
+# |            \____|_| |_|\___|\___|_|\_\___|_|  |_|_|\_\           |
+# |                                                                  |
+# | Copyright Mathias Kettner 2016             mk@mathias-kettner.de |
+# +------------------------------------------------------------------+
+#
+# This file is part of Check_MK.
+# The official homepage is at http://mathias-kettner.de/check_mk.
+#
+# check_mk is free software;  you can redistribute it and/or modify it
+# under the  terms of the  GNU General Public License  as published by
+# the Free Software Foundation in version 2.  check_mk is  distributed
+# in the hope that it will be useful, but WITHOUT ANY WARRANTY;  with-
+# out even the implied warranty of  MERCHANTABILITY  or  FITNESS FOR A
+# PARTICULAR PURPOSE. See the  GNU General Public License for more de-
+# tails. You should have  received  a copy of the  GNU  General Public
+# License along with GNU Make; see the file  COPYING.  If  not,  write
+# to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
+# Boston, MA 02110-1301 USA.
+
+# example output
+# OHTER Database (SID)                *
+# OHTER Oracle Version                *
+# OHTER Database Creation Time        -
+# OHTER DB Startup Time               -
+# OHTER DB Log Mode                   *
+# OHTER DB Open Mode                  *
+# OHTER DB Logins                     *
+# OTHER Dataguard State               -
+# DONE  Flashback                     -
+#       SGA (System Global Area)      -
+#       Temp File Size                -
+
+
+def inv_oracle_recovery_area(info):
+    node = inv_tree_list("software.applications.oracle.recovery_area:")
+    for line in info:
+        if len(line) > 5:
+            node.append({
+                "id"        : line[0],
+                "flashback" : line[-1],
+            })
+
+
+inv_info['oracle_recovery_area'] = {
+    'inv_function' : inv_oracle_recovery_area,
+}
