@@ -718,6 +718,39 @@ inventory_displayhints.update({
     ".software.applications.citrix.vm.catalog"                    : { "title" : _("Catalog"), },
     ".software.applications.citrix.vm.agent_version"              : { "title" : _("Agent Version"), },
 
+    ".software.applications.oracle."          : { "title" : _("Oracle DB") },
+    ".software.applications.oracle.instance:" : { "title"    : _("Instances"),
+                                                  "render"   : render_inv_dicttable,
+                                                  "keyorder" : [ "id", "version", "openmode", "logmode", "logins", "db_uptime", "db_creation_time" ] },
+    ".software.applications.oracle.instance:*.id"       : { "title" : _("ID"), },
+    ".software.applications.oracle.instance:*.version"  : { "title" : _("Version"), },
+    ".software.applications.oracle.instance:*.openmode" : { "title" : _("Open mode"), },
+    ".software.applications.oracle.instance:*.logmode"  : { "title" : _("Log mode"), },
+    ".software.applications.oracle.instance:*.logins"   : { "title" : _("Logins"), },
+    ".software.applications.oracle.instance:*.db_uptime"        : { "title" : _("Uptime"), "paint" : "age" },
+    ".software.applications.oracle.instance:*.db_creation_time" : { "title" : _("Creation time") },
+
+    ".software.applications.oracle.dataguard_stats:" : { "title"    : _("Dataguard-Stats"),
+                                                         "render"   : render_inv_dicttable,
+                                                         "keyorder" : [ "id", "role", "db_unique", "switchover" ] },
+    ".software.applications.oracle.dataguard_stats:*.id"   : { "title" : _("ID"), },
+    ".software.applications.oracle.dataguard_stats:*.role" : { "title" : _("Role"), },
+    ".software.applications.oracle.dataguard_stats:*.db_unique" : { "title" : _("Unique name"), },
+    ".software.applications.oracle.dataguard_stats:*.switchover" : { "title" : _("Switchover"), },
+
+    ".software.applications.oracle.recovery_area:" : { "title"    : _("Recovery area"),
+                                                       "render"   : render_inv_dicttable,
+                                                       "keyorder" : [ "id", "role" ] },
+    ".software.applications.oracle.recovery_area:*.id"        : { "title" : _("ID"), },
+    ".software.applications.oracle.recovery_area:*.flashback" : { "title" : _("Flashback"), },
+
+    ".software.applications.oracle.performance:" : { "title"    : _("Performance"),
+                                                     "render"   : render_inv_dicttable,
+                                                     "keyorder" : [ "id", "sga_info", "sga_size" ] },
+    ".software.applications.oracle.performance:*.id"        : { "title" : _("ID"), },
+    ".software.applications.oracle.performance:*.sga_info" : { "title" : _("SGA info"), },
+    ".software.applications.oracle.performance:*.sga_size" : { "title" : _("SGA size"), "paint" : "bytes" },
+
     ".software.applications.vmwareesx:*."              : { "title" : _("Datacenter %d") },
     ".software.applications.vmwareesx:*.clusters:*."   : { "title" : _("Cluster %d") },
 
